objects/Error_Log__c.object
<CustomObject>
    <description>Contains records containing error logs from different failures in Apex.</description>
    <fields>
        <fullName>Error_Message__c</fullName>
        <label>Error message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process_Function_Name__c</fullName>
        <description>Name of the Process/Function that resulted in the error.</description>
        <label>Process/Function name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Process type</label>
        <picklist>
            <picklistValues>
                <fullName>Apex Trigger</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Web Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Future Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Related_data__c</fullName>
        <label>Related data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Process_Type__c</columns>
        <columns>Process_Function_Name__c</columns>
        <columns>Error_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>Err-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>